# ct600-filing

./: .env.example  .gitignore  AGENTS.md  DISCLAIMER.md  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml  return.yaml
.githooks/: pre-commit
ct600/: accounts.py  build.py  cli.py  computation.py  irmark.py  ixbrl.py  lts.py  submit.py
reference/: README.md
scripts/: check_history.py  fetch_microaccounts_sample.py  fetch_reference.sh  poll_submission.py  preview_xml.py  show_submission.py  submission_lib.py
tests/: test_build.py  test_irmark.py  test_ixbrl.py  test_lts.py
